# combine_categorical_runs

./: .gitignore  Makefile.am  README.md  combine_categorical_runs-0.2.0.pc.in  combine_categorical_runs-1.0.0.pc.in  combine_categorical_runs-1.1.0.pc.in  combine_categorical_runs.doxyfile  configure.ac  environment.yaml
combine_categorical_runs/: main.cc
finter/: configure.ac
finter/finter/: finter.h  finter_reader_bzip2.cc  finter_reader_bzip2.h  finter_reader_flat.cc  finter_reader_flat.h  finter_reader_gzip.cc  finter_reader_gzip.h  finter_reader_parent.h  finter_writer_bzip2.cc  finter_writer_bzip2.h  finter_writer_flat.cc  finter_writer_flat.h  finter_writer_gzip.cc  finter_writer_gzip.h  finter_writer_parent.h  helper.h
finter/m4/: ax_check_gmp.m4  ax_check_mpfr.m4
m4/: ax_check_bzip2.m4  ax_check_gmp.m4  ax_check_mpfr.m4  ax_check_zlib.m4  gmp.m4  mpfr.m4
